--- a/contact.html
+++ b/contact.html
@@ -159,7 +159,7 @@
                                     <i class="fa fa-map-marker-alt text-white"></i>
                                 </div>
                                 <h5 class="text-primary mb-2">Ubicación</h5>
-                                <p class="mb-0">Barcelona, España</p>
+                                <p class="mb-0">Calle química 8 A 51, Barcelona</p>
                             </div>
                         </div>
                         <div class="col-sm-6">
@@ -389,7 +389,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Contáctanos</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>Barcelona, España</p>
+                    <p><i class="fa fa-map-marker-alt me-3"></i>Calle química 8 A 51, Barcelona</p>
                     <p><i class="fa fa-phone-alt me-3"></i>632 939 629</p>
                     <p><i class="fa fa-phone-alt me-3"></i>624 596 387</p>
                     <p><i class="fa fa-envelope me-3"></i>conservicios14315@gmail.com</p>
