--- a/feature.html
+++ b/feature.html
@@ -269,7 +269,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Contáctanos</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>Barcelona, España</p>
+                    <p><i class="fa fa-map-marker-alt me-3"></i>Calle química 8 A 51, Barcelona</p>
                     <p><i class="fa fa-phone-alt me-3"></i>632 939 629</p>
                     <p><i class="fa fa-phone-alt me-3"></i>624 596 387</p>
                     <p><i class="fa fa-envelope me-3"></i>conservicios14315@gmail.com</p>
