--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Nosotros - Conde Servicios</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="sobre nosotros, aire acondicionado, calefacción, climatización, técnicos especializados, Barcelona, España" name="keywords">
+    <meta content="sobre nosotros, aire acondicionado, calefacción, climatización, técnicos especializados, Calle química 8 A 51, Barcelona" name="keywords">
     <meta content="Conoce más sobre Conde Servicios. Técnicos especializados en aire acondicionado y calefacción con amplia experiencia y trabajos garantizados." name="description">
 
     <!-- Favicon -->
@@ -196,7 +196,7 @@
                     <div class="bg-white p-5 rounded shadow h-100">
                         <h2 class="text-primary mb-4">Nuestra Visión</h2>
                         <p class="mb-4">Nuestra visión como empresa es poder ser una de las empresas más reconocida a nivel nacional garantizando cada uno de nuestros trabajos.</p>
-                        <p class="mb-4">Aspiramos a liderar el mercado de servicios de climatización en Barcelona, España, siendo reconocidos por nuestra excelencia técnica, innovación y compromiso con la satisfacción del cliente.</p>
+                        <p class="mb-4">Aspiramos a liderar el mercado de servicios de climatización en Calle química 8 A 51, Barcelona, siendo reconocidos por nuestra excelencia técnica, innovación y compromiso con la satisfacción del cliente.</p>
                         <div class="row g-3">
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
@@ -403,7 +403,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Contáctanos</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>Barcelona, España</p>
+                    <p><i class="fa fa-map-marker-alt me-3"></i>Calle química 8 A 51, Barcelona</p>
                     <p><i class="fa fa-phone-alt me-3"></i>632 939 629</p>
                     <p><i class="fa fa-phone-alt me-3"></i>624 596 387</p>
                     <p><i class="fa fa-envelope me-3"></i>conservicios14315@gmail.com</p>
