--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="canonical" href="https://condeservicios.es/" />
 </head>
 
 <body>
